--- a/Code/ECMonitoring/ECMonitoring/Views/Web.config
+++ b/Code/ECMonitoring/ECMonitoring/Views/Web.config
@@ -8,6 +8,11 @@
     </sectionGroup>
   </configSections>
 
+  <connectionStrings>
+    <add name="BookStore" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='E:\Projects\Tolik\ECMonitoring\Code\ECMonitoring\ECMonitoring\App_Data\BookStore.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+   
+  </connectionStrings>
+  
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
