--- a/Code/ECMonitoring/ECMonitoring/Web.config
+++ b/Code/ECMonitoring/ECMonitoring/Web.config
@@ -18,9 +18,9 @@
   <connectionStrings>
     <!--<add name="BookStore" connectionString="Data Source=STAS-PC\SQLEXPRESS;Initial Catalog=BookStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="BookStore" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='E:\Projects\Tolik\ECMonitoring\Code\ECMonitoring\ECMonitoring\App_Data\BookStore.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="EcMonitoring" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='E:\Projects\Tolik\ECMonitoring\Code\ECMonitoring\ECMonitoring\App_Data\eCommerce.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="eCommerce" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='E:\Projects\Tolik\ECMonitoring\Code\ECMonitoring\ECMonitoring\App_Data\eCommerce.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EcMonitoring" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='E:\Projects\Tolik\ECMonitoring\Code\ECMonitoring\ECMonitoring\App_Data\ECMonitoring.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
