--- a/Code/ECMonitoring/ECMonitoring/ECMonitoring.csproj
+++ b/Code/ECMonitoring/ECMonitoring/ECMonitoring.csproj
@@ -127,6 +127,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccessDbController.cs" />
     <Compile Include="Controllers\EcMonitoringController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestController.cs" />
@@ -181,6 +182,7 @@
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\TestDb\Index.cshtml" />
     <Content Include="Views\EcMonitoring\Index.cshtml" />
+    <Content Include="Views\AccessDb\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
