--- a/Code/ECMonitoring.Core/ECMonitoring.Core.csproj
+++ b/Code/ECMonitoring.Core/ECMonitoring.Core.csproj
@@ -48,18 +48,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataObjects\HttpHeaderAttributes.cs" />
-    <Compile Include="DataObjects\HttpDeviceResponseStatus.cs" />
+    <Compile Include="DataObjects\LanDeviceHttpStatus.cs" />
     <Compile Include="DataObjects\LanDeviceEventArgs.cs" />
+    <Compile Include="Devices\FakeLanDevice.cs" />
     <Compile Include="Devices\HttpAnalyzer.cs" />
+    <Compile Include="Devices\ILanDevice.cs" />
     <Compile Include="Devices\LanDevice.cs" />
+    <Compile Include="Devices\PingGenerator.cs" />
+    <Compile Include="Devices\SingleShot.cs" />
     <Compile Include="Devices\TcpAnalyzer.cs" />
     <Compile Include="ECMonitoringPicap.cs" />
     <Compile Include="Exceptions\DeviceAlreadyConnectedException.cs" />
     <Compile Include="Loggers\ILogger.cs" />
     <Compile Include="Loggers\FileLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StorageHandlers\IStorageHandler.cs" />
-    <Compile Include="StorageHandlers\MemoryStorage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
