--- a/Code/ECMService/ECMService/ECMService.csproj
+++ b/Code/ECMService/ECMService/ECMService.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\EcmData.cs" />
     <Compile Include="Storage\IStorage.cs" />
     <Compile Include="Storage\MemoryStorage.cs" />
     <EmbeddedResource Include="FormMain.resx">
