--- a/Code/ECMService/ECMService/ECMService.csproj
+++ b/Code/ECMService/ECMService/ECMService.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Core\ClientEndPoint.cs" />
     <Compile Include="Core\ClientService.cs" />
+    <Compile Include="Core\ECMonitor.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
