--- a/Code/ECMService/ECMService/App.config
+++ b/Code/ECMService/ECMService/App.config
@@ -1,6 +1,55 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  
+    <!--<system.serviceModel>
+        <behaviors>
+            <serviceBehaviors>
+                <behavior name="">
+                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+                    <serviceDebug includeExceptionDetailInFaults="false" />
+                </behavior>
+            </serviceBehaviors>
+        </behaviors>
+        <services>
+            <service name="ECMService.Connectors">
+                <endpoint address="" binding="basicHttpBinding" contract="ECMService.IConnectors">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <host>
+                    <baseAddresses>
+                        <add baseAddress="http://localhost:8733" />
+                    </baseAddresses>
+                </host>
+            </service>
+        </services>
+    </system.serviceModel>-->
+
+    <system.serviceModel>
+      <services>
+        <service name="ECMService.Connectors" behaviorConfiguration="mexBehavior">
+          <endpoint address="ECMService.Connectors" binding="basicHttpBinding" contract="ECMService.IConnectors" ></endpoint>
+          <!--<endpoint address="Summator.Library.Summator" binding="netTcpBinding" contract="Summator.Library.ISummator"></endpoint>-->
+          <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:8733"/>
+            </baseAddresses>
+          </host>
+        </service>
+      </services>
+      <behaviors>
+        <serviceBehaviors>
+          <behavior name="mexBehavior">
+            <serviceMetadata httpGetEnabled="true"/>
+          </behavior>
+        </serviceBehaviors>
+      </behaviors>
+    </system.serviceModel>
+  
 </configuration>
