--- a/Code/ECMService.Manager/ECMService.Manager.csproj
+++ b/Code/ECMService.Manager/ECMService.Manager.csproj
@@ -48,6 +48,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="DTO\DataContainer.cs" />
     <Compile Include="DTO\EndPointDataDTO.cs" />
     <Compile Include="ECMonitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
