Создание метода получения данных по сервису, проверка WCF сервиса на десктоп клиенте

--- a/Code/ECMService.Manager/ECMService.Manager.csproj
+++ b/Code/ECMService.Manager/ECMService.Manager.csproj
@@ -50,6 +50,7 @@
     </Compile>
     <Compile Include="DTO\DataContainer.cs" />
     <Compile Include="DTO\EndPointDataDTO.cs" />
+    <Compile Include="DTO\ServiceDataDTO.cs" />
     <Compile Include="ECMonitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
