--- a/Code/DBaseService/DBaseService.csproj
+++ b/Code/DBaseService/DBaseService.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\ClientEndPointDTO.cs" />
+    <Compile Include="DTO\ClientMetricDTO.cs" />
     <Compile Include="DTO\ClientServiceDTO.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
