Позиционирование левой панели

--- a/Code/ECMonitoring/ECMonitoring.csproj
+++ b/Code/ECMonitoring/ECMonitoring.csproj
@@ -187,7 +187,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\ECM\IndexPrv.cshtml" />
+    <Content Include="Views\ECM\IndexPrvPrv.cshtml" />
     <Content Include="Views\ECM\Login.cshtml" />
     <Content Include="Views\ECM\LeftBar.cshtml" />
     <Content Include="Views\ECM\MainArea.cshtml" />
@@ -195,6 +195,8 @@
     <Content Include="Views\ECM\ResourceUsageMetric.cshtml" />
     <Content Include="Views\ECM\Index.cshtml" />
     <Content Include="Views\Shared\_EcmLayout.cshtml" />
+    <Content Include="Views\ECM\IndexNew.cshtml" />
+    <Content Include="Views\Shared\_EcmLayoutNew.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
