--- a/Code/Final/ECMonitoring/ECMonitoring.Service/ECMonitoring.Service.csproj
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/ECMonitoring.Service.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2E4CD63E-9F67-44BA-B3E6-A4AE8652F7A3}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ECMService</RootNamespace>
-    <AssemblyName>ECMService</AssemblyName>
+    <ProjectGuid>{860CFBA7-2DCB-4732-AC11-90AC711755F1}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>ECMonitoring.Service</RootNamespace>
+    <AssemblyName>ECMonitoring.Service</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,20 +32,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.7.2\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Connector.cs" />
+    <Compile Include="Core\ECMonitor.cs" />
     <Compile Include="Core\Dispatcher.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
@@ -68,12 +57,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\EcmData.cs" />
-    <Compile Include="Storage\IStorage.cs" />
-    <Compile Include="Storage\MemoryStorage.cs" />
-    <Compile Include="Storage\ResourceUsage.cs" />
-    <Compile Include="WCFService\Connectors.cs" />
-    <Compile Include="WCFService\IConnectors.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,7 +69,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -101,13 +83,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DBaseService\DBaseService.csproj">
-      <Project>{a4b16342-00d6-4c77-9738-41f4271eec37}</Project>
-      <Name>DBaseService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ECMonitoring.Core\ECMonitoring.Core.csproj">
-      <Project>{2905c279-b1c5-46a0-9cfc-3511c31ac0ba}</Project>
-      <Name>ECMonitoring.Core</Name>
+    <ProjectReference Include="..\ECMonitoring.Data\ECMonitoring.Data.csproj">
+      <Project>{b9eb1aa0-fb3a-44a4-bc5a-d9d6f80afe72}</Project>
+      <Name>ECMonitoring.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
