Приступили к созданию форм сущностей

--- a/Code/EntityFramework/ECMonitoring/App.config
+++ b/Code/EntityFramework/ECMonitoring/App.config
@@ -10,7 +10,5 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-  <connectionStrings>
-    <add name="ECMonitoringEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STAS-PC\SQLEXPRESS;initial catalog=ECMonitoring;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+  
+<connectionStrings><add name="ECMonitoringEntities" connectionString="metadata=res://*/Data.Model.csdl|res://*/Data.Model.ssdl|res://*/Data.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STAS-PC\SQLEXPRESS;initial catalog=ECMonitoring;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
