--- a/Code/Final/ECMonitoring/ECMonitoring.Service/ECMonitoring.Service.csproj
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/ECMonitoring.Service.csproj
@@ -79,6 +79,18 @@
     <Compile Include="Forms\FormServicesList.Designer.cs">
       <DependentUpon>FormServicesList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormUser.Designer.cs">
+      <DependentUpon>FormUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormUsers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormUsers.Designer.cs">
+      <DependentUpon>FormUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\EcmData.cs" />
@@ -98,6 +110,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormServicesList.resx">
       <DependentUpon>FormServicesList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormUser.resx">
+      <DependentUpon>FormUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormUsers.resx">
+      <DependentUpon>FormUsers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
