--- a/Code/Final/ECMonitoring/ECMonitoring/Web.config
+++ b/Code/Final/ECMonitoring/ECMonitoring/Web.config
@@ -20,8 +20,13 @@
     <httpRuntime targetFramework="4.6.1" />
 
     <authentication mode="Forms">
-      <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" /> <!--slidingExpiration="true"/>-->
+      <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" slidingExpiration="true"/> <!--slidingExpiration="true"/>-->
     </authentication>
+
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <!--<error statusCode="404" redirect="~/404.html"/>
+      <error statusCode="403" redirect="~/403.html"/>-->
+    </customErrors>
   </system.web>
   
   <runtime>
