--- a/Code/Final/ECMonitoring/ECMonitoring/Web.config
+++ b/Code/Final/ECMonitoring/ECMonitoring/Web.config
@@ -23,10 +23,14 @@
       <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" slidingExpiration="true"/> <!--slidingExpiration="true"/>-->
     </authentication>
 
-    <customErrors mode="On" defaultRedirect="~/Error">
+    <customErrors mode="On" defaultRedirect="~/Shared/Error">
       <!--<error statusCode="404" redirect="~/404.html"/>
       <error statusCode="403" redirect="~/403.html"/>-->
     </customErrors>
+
+    <!--<customErrors mode="On" defaultRedirect="~/Errors/ErrorHandler">
+    </customErrors>-->
+    
   </system.web>
   
   <runtime>
@@ -85,5 +89,21 @@
           contract="ServiceReference.IECMService" name="BasicHttpBinding_IECMService" />
     </client>
   </system.serviceModel>
-  
+
+  <system.webServer>
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace" defaultPath="/Errors/ErrorHandler"  defaultResponseMode="ExecuteURL">-->
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error statusCode="404" path="/Errors/ErrorHandler" responseMode="ExecuteURL"/>
+      <error statusCode="403" path="/Errors/ErrorHandler" responseMode="ExecuteURL"/>
+      <error statusCode="500" path="/Errors/ErrorHandler" responseMode="ExecuteURL"/>
+    </httpErrors>-->
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error statusCode="404" path="/Shared/Error.cshtml" responseMode="File"/>
+      <error statusCode="403" path="/Shared/Error" responseMode="File"/>
+      <error statusCode="500" path="/Shared/Error.cshtml" responseMode="File"/>
+    </httpErrors>-->
+    
+  </system.webServer>
 </configuration>
