--- a/Code/Final/ECMonitoring/ECMonitoring/Web.config
+++ b/Code/Final/ECMonitoring/ECMonitoring/Web.config
@@ -20,17 +20,8 @@
     <httpRuntime targetFramework="4.6.1" />
 
     <authentication mode="Forms">
-      <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" slidingExpiration="true"/> <!--slidingExpiration="true"/>-->
+      <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" slidingExpiration="true"/>
     </authentication>
-
-    <customErrors mode="On" defaultRedirect="~/Shared/Error">
-      <!--<error statusCode="404" redirect="~/404.html"/>
-      <error statusCode="403" redirect="~/403.html"/>-->
-    </customErrors>
-
-    <!--<customErrors mode="On" defaultRedirect="~/Errors/ErrorHandler">
-    </customErrors>-->
-    
   </system.web>
   
   <runtime>
@@ -71,11 +62,6 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  
-  <!--<system.serviceModel>
-    <bindings />
-    <client />
-  </system.serviceModel>-->
 
   <system.serviceModel>
     <bindings>
@@ -89,21 +75,4 @@
           contract="ServiceReference.IECMService" name="BasicHttpBinding_IECMService" />
     </client>
   </system.serviceModel>
-
-  <system.webServer>
-    <!--<httpErrors errorMode="Custom" existingResponse="Replace" defaultPath="/Errors/ErrorHandler"  defaultResponseMode="ExecuteURL">-->
-    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
-      <clear/>
-      <error statusCode="404" path="/Errors/ErrorHandler" responseMode="ExecuteURL"/>
-      <error statusCode="403" path="/Errors/ErrorHandler" responseMode="ExecuteURL"/>
-      <error statusCode="500" path="/Errors/ErrorHandler" responseMode="ExecuteURL"/>
-    </httpErrors>-->
-    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
-      <clear/>
-      <error statusCode="404" path="/Shared/Error.cshtml" responseMode="File"/>
-      <error statusCode="403" path="/Shared/Error" responseMode="File"/>
-      <error statusCode="500" path="/Shared/Error.cshtml" responseMode="File"/>
-    </httpErrors>-->
-    
-  </system.webServer>
 </configuration>
