Обработка ошибок веб завершена (безс логгированием)

--- a/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
@@ -7,7 +7,12 @@
     <connectionStrings>
       <add name="ECMonitoring" connectionString="Data Source=STAS-PC\SQLEXPRESS;Initial Catalog=ECMonitoring;Integrated Security=True" providerName="System.Data.EntityClient"/>
     </connectionStrings>
-
+  
+    <appSettings>
+      <add key="ClientRequestWaiting" value="3000"/>
+      <add key="RepeatPingEvery" value="500"/>
+    </appSettings>
+  
     <system.serviceModel>
       <services>
         <service name="ECMonitoring.Service.ECMService" behaviorConfiguration="mexBehavior">
