--- a/Code/Test.WebRequest/Test.WebRequest/Test.WebRequest.csproj
+++ b/Code/Test.WebRequest/Test.WebRequest/Test.WebRequest.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2905C279-B1C5-46A0-9CFC-3511C31AC0BA}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ECMonitoring.Core</RootNamespace>
-    <AssemblyName>ECMonitoring.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ProjectGuid>{39348CC0-5CDB-4694-9632-628AAB77BACC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Test.WebRequest</RootNamespace>
+    <AssemblyName>Test.WebRequest</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,43 +32,55 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PacketDotNet">
-      <HintPath>..\..\..\..\..\Arhive\WinPcap\SharpPcap-4.2.0\Release\PacketDotNet.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpPcap">
-      <HintPath>..\..\..\..\..\Arhive\WinPcap\SharpPcap-4.2.0\Release\SharpPcap.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataObjects\LanDeviceStatusEventArgs.cs" />
-    <Compile Include="DataObjects\HttpHeaderAttributes.cs" />
-    <Compile Include="DataObjects\LanDeviceHttpStatus.cs" />
-    <Compile Include="DataObjects\LanDeviceEventArgs.cs" />
-    <Compile Include="DataObjects\ResourceUsageEventArgs.cs" />
-    <Compile Include="Devices\FakeLanDevice.cs" />
-    <Compile Include="Devices\HttpAnalyzer.cs" />
-    <Compile Include="Devices\ILanDevice.cs" />
-    <Compile Include="Devices\LanDevice.cs" />
-    <Compile Include="Devices\PingGenerator.cs" />
-    <Compile Include="Devices\SingleShot.cs" />
-    <Compile Include="Devices\TcpAnalyzer.cs" />
-    <Compile Include="Monitors\IECMonitor.cs" />
-    <Compile Include="Monitors\LanMonitor.cs" />
-    <Compile Include="Exceptions\DeviceAlreadyConnectedException.cs" />
-    <Compile Include="Loggers\ILogger.cs" />
-    <Compile Include="Loggers\FileLogger.cs" />
-    <Compile Include="Monitors\ResourceMonitor.cs" />
+    <Compile Include="FormMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
