--- a/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
@@ -11,6 +11,7 @@
     <appSettings>
       <add key="ClientRequestWaiting" value="3000"/>
       <add key="RepeatPingEvery" value="500"/>
+      <add key="PingErrorsCountMax" value="10"/>
     </appSettings>
   
     <system.serviceModel>
