--- a/Code/Final/ECMonitoring/ECMonitoring.Logger/ECMonitoring.Logger.csproj
+++ b/Code/Final/ECMonitoring/ECMonitoring.Logger/ECMonitoring.Logger.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2905C279-B1C5-46A0-9CFC-3511C31AC0BA}</ProjectGuid>
+    <ProjectGuid>{C02E43BE-57C3-4E33-B261-DCD453C48FFA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ECMonitoring.Core</RootNamespace>
-    <AssemblyName>ECMonitoring.Core</AssemblyName>
+    <RootNamespace>ECMonitoring.Logger</RootNamespace>
+    <AssemblyName>ECMonitoring.Logger</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,15 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PacketDotNet">
-      <HintPath>..\..\..\..\..\Arhive\WinPcap\SharpPcap-4.2.0\Release\PacketDotNet.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpPcap">
-      <HintPath>..\..\..\..\..\Arhive\WinPcap\SharpPcap-4.2.0\Release\SharpPcap.dll</HintPath>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.7.2\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,31 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataObjects\LanDeviceStatusEventArgs.cs" />
-    <Compile Include="DataObjects\HttpHeaderAttributes.cs" />
-    <Compile Include="DataObjects\LanDeviceHttpStatus.cs" />
-    <Compile Include="DataObjects\LanDeviceEventArgs.cs" />
-    <Compile Include="DataObjects\ResourceUsageEventArgs.cs" />
-    <Compile Include="Devices\FakeLanDevice.cs" />
-    <Compile Include="Devices\HttpAnalyzer.cs" />
-    <Compile Include="Devices\ILanDevice.cs" />
-    <Compile Include="Devices\LanDevice.cs" />
-    <Compile Include="Devices\PingGenerator.cs" />
-    <Compile Include="Devices\SingleShot.cs" />
-    <Compile Include="Devices\TcpAnalyzer.cs" />
-    <Compile Include="Monitors\IECMonitor.cs" />
-    <Compile Include="Monitors\LanMonitor.cs" />
-    <Compile Include="Exceptions\DeviceAlreadyConnectedException.cs" />
-    <Compile Include="Loggers\ILogger.cs" />
-    <Compile Include="Loggers\FileLogger.cs" />
-    <Compile Include="Monitors\ResourceMonitor.cs" />
+    <Compile Include="EcmLogger.cs" />
+    <Compile Include="IEcmLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ECMonitoring.Logger\ECMonitoring.Logger.csproj">
-      <Project>{c02e43be-57c3-4e33-b261-dcd453c48ffa}</Project>
-      <Name>ECMonitoring.Logger</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
