--- a/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
@@ -12,6 +12,8 @@
       <add key="ClientRequestWaiting" value="3000"/>
       <add key="RepeatPingEvery" value="500"/>
       <add key="PingErrorsCountMax" value="10"/>
+      <add key="DebugLevel" value="Trace" />
+      <add key="IsConsoleLog" value="true" />
     </appSettings>
   
     <system.serviceModel>
