--- a/Code/Final/ECMonitoring/ECMonitoring.Service/ECMonitoring.Service.csproj
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/ECMonitoring.Service.csproj
@@ -126,6 +126,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="NLog.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -147,6 +148,10 @@
     <ProjectReference Include="..\ECMonitoring.Data\ECMonitoring.Data.csproj">
       <Project>{b9eb1aa0-fb3a-44a4-bc5a-d9d6f80afe72}</Project>
       <Name>ECMonitoring.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ECMonitoring.Logger\ECMonitoring.Logger.csproj">
+      <Project>{C02E43BE-57C3-4E33-B261-DCD453C48FFA}</Project>
+      <Name>ECMonitoring.Logger</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
