--- a/Code/Final/ECMonitoring/ECMonitoring.Service/NLog.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/NLog.config
@@ -4,16 +4,20 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true">
 
-  <variable name="LogDir" value="E:\Projects\Tolik\ECMonitoring\Code\Final\ECMonitoring\ECMonitoring\Logs"/>
+  <variable name="LogDir" value="E:\Projects\Tolik\ECMonitoring\Code\Final\ECMonitoring\Logs"/>
 
   <targets  async="true">
     <default-target-parameters xsi:type="File" keepFileOpen="false" layout="${message}" encoding="utf-8" maxArchiveFiles="200" archiveNumbering="Rolling" archiveAboveSize="20480000" concurrentWrites="true"/>
     <target name="default" xsi:type="File" fileName="${LogDir}\default.txt"/>
-    <target name="Web" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
+    <target name="Core-LanMonitor" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
+    <target name="Core-LanDevice" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
+    <target name="WCFService" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
   </targets>
 
   <rules>
     <logger name="default" minlevel="Trace" writeTo="default" />
-    <logger name="Web" minlevel="Info" writeTo="Web" />
+    <logger name="Core-LanMonitor" minlevel="Info" writeTo="Core-LanMonitor" />
+    <logger name="Core-LanDevice" minlevel="Info" writeTo="Core-LanDevice" />
+    <logger name="WCFService" minlevel="Info" writeTo="WCFService" />
   </rules>
 </nlog>
