--- a/Code/Final/ECMonitoring/ECMonitoring/ECMonitoring.csproj
+++ b/Code/Final/ECMonitoring/ECMonitoring/ECMonitoring.csproj
@@ -56,9 +56,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\ECMService\packages\NLog.4.7.2\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -214,6 +211,10 @@
     <ProjectReference Include="..\ECMonitoring.Data\ECMonitoring.Data.csproj">
       <Project>{b9eb1aa0-fb3a-44a4-bc5a-d9d6f80afe72}</Project>
       <Name>ECMonitoring.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ECMonitoring.Logger\ECMonitoring.Logger.csproj">
+      <Project>{c02e43be-57c3-4e33-b261-dcd453c48ffa}</Project>
+      <Name>ECMonitoring.Logger</Name>
     </ProjectReference>
     <ProjectReference Include="..\ECMonitoring.Manager\ECMonitoring.Manager.csproj">
       <Project>{a726fee8-fe09-4082-90cb-b4831e7b5fe8}</Project>
