--- a/Code/Final/ECMonitoring/ECMonitoring/Web.config
+++ b/Code/Final/ECMonitoring/ECMonitoring/Web.config
@@ -9,10 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DebugLevel" value="Trace" />
+    <add key="IsConsoleLog" value="true" />
   </appSettings>
 
   <connectionStrings>
-    <add name="ECMonitoring" connectionString="Data Source=STAS-PC\SQLEXPRESS;Initial Catalog=ECMonitoring;Integrated Security=True" providerName="System.Data.EntityClient"/>
+    <add name="ECMonitoring" connectionString="Data Source=STAS-PC\SQLEXPRESS;Initial Catalog=ECMonitoring;Integrated Security=True" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <system.web>
@@ -20,7 +22,7 @@
     <httpRuntime targetFramework="4.6.1" />
 
     <authentication mode="Forms">
-      <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" slidingExpiration="true"/>
+      <forms loginUrl="~/ECM/Login" timeout="1" cookieless="UseCookies" slidingExpiration="true" />
     </authentication>
   </system.web>
   
@@ -70,9 +72,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8733/ECMonitoring.Service.ECMService"
-          binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IECMService"
-          contract="ServiceReference.IECMService" name="BasicHttpBinding_IECMService" />
+      <endpoint address="http://localhost:8733/ECMonitoring.Service.ECMService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IECMService" contract="ServiceReference.IECMService" name="BasicHttpBinding_IECMService" />
     </client>
   </system.serviceModel>
 </configuration>
