Логгирование Сетевого монитора завершено

--- a/Code/Final/ECMonitoring/ECMonitoring.Service/NLog.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/NLog.config
@@ -16,8 +16,8 @@
 
   <rules>
     <logger name="default" minlevel="Trace" writeTo="default" />
-    <logger name="Core-LanMonitor" minlevel="Info" writeTo="Core-LanMonitor" />
-    <logger name="Core-LanDevice" minlevel="Info" writeTo="Core-LanDevice" />
-    <logger name="WCFService" minlevel="Info" writeTo="WCFService" />
+    <logger name="Core-LanMonitor" minlevel="Trace" writeTo="Core-LanMonitor" />
+    <logger name="Core-LanDevice" minlevel="Trace" writeTo="Core-LanDevice" />
+    <logger name="WCFService" minlevel="Trace" writeTo="WCFService" />
   </rules>
 </nlog>
