Монитор ресурсов закончил

--- a/Code/Final/ECMonitoring/ECMonitoring.Service/NLog.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/NLog.config
@@ -12,6 +12,7 @@
     <target name="Core-LanMonitor" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
     <target name="Core-LanDevice" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
     <target name="WCFService" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
+    <target name="Core-ResourceInfo" xsi:type="File" fileName="${LogDir}\ECMonitoring.txt"/>
   </targets>
 
   <rules>
@@ -19,5 +20,6 @@
     <logger name="Core-LanMonitor" minlevel="Trace" writeTo="Core-LanMonitor" />
     <logger name="Core-LanDevice" minlevel="Trace" writeTo="Core-LanDevice" />
     <logger name="WCFService" minlevel="Trace" writeTo="WCFService" />
+    <logger name="Core-ResourceInfo" minlevel="Trace" writeTo="Core-ResourceInfo" />
   </rules>
 </nlog>
