--- a/Code/Final/ECMonitoring/ECMonitoring.Core/ECMonitoring.Core.csproj
+++ b/Code/Final/ECMonitoring/ECMonitoring.Core/ECMonitoring.Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,6 +66,9 @@
     <Compile Include="Exceptions\DeviceAlreadyConnectedException.cs" />
     <Compile Include="Monitors\ResourceMonitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\FakeResourceInfo.cs" />
+    <Compile Include="Resources\IResourceInfo.cs" />
+    <Compile Include="Resources\ResourceInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ECMonitoring.Logger\ECMonitoring.Logger.csproj">
