--- a/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
@@ -14,6 +14,8 @@
       <add key="PingErrorsCountMax" value="10"/>
       <add key="DebugLevel" value="Trace" />
       <add key="IsConsoleLog" value="true" />
+      <add key="ResourceInfoConnectWaiting" value="1"/>
+      <add key="RepeatResourceRequestEvery" value="1000"/>
     </appSettings>
   
     <system.serviceModel>
