--- a/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
+++ b/Code/Final/ECMonitoring/ECMonitoring.Service/App.config
@@ -10,8 +10,9 @@
   
     <appSettings>
       <add key="ClientRequestWaiting" value="3000"/>
-      <add key="RepeatPingEvery" value="500"/>
+      <add key="RepeatPingEvery" value="1500"/>
       <add key="PingErrorsCountMax" value="10"/>
+      <add key="PingWaitingResponse" value="1000"/>
       <add key="DebugLevel" value="Trace" />
       <add key="IsConsoleLog" value="true" />
       <add key="ResourceInfoConnectWaiting" value="1"/>
